Bug 269950 - Information dialogues shouldn't be on top of all Dolphin windows
Summary: Information dialogues shouldn't be on top of all Dolphin windows
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 212957 255774 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-04-02 16:33 UTC by OsamaK
Modified: 2011-09-22 06:48 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description OsamaK 2011-04-02 16:33:07 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

On copying errors, Dolphin shows Information dialogues that are on top of all of its windows. This can prevent fixing the error.

When I was copying some large files, my external drive was disconnected and I had to remount it using the terminal because Dolphin was busy telling me it couldn't copy one file.

Reproducible: Always

Steps to Reproduce:
1. Copy from/to an external hard disk.
2. Disconnect the external hard disk while copying.

Actual Results:  
Dolphin will show an error message on top of all of its windows.

Expected Results:  
Dolphin should show an error message that doesn't prevent interacting with neither the original window, nor other windows.
Comment 1 Frank Reininghaus 2011-04-03 10:36:20 UTC
Thanks for the bug report. This is related to bug 212957.
Comment 2 Peter Penz 2011-04-12 20:01:57 UTC
Git commit fff7573ebb910712ad97951bf1762e6a7bb0bdc7 by Peter Penz.
Committed on 12/04/2011 at 20:01.
Pushed by ppenz into branch 'master'.

Let each DolphinMainWindow run in a custom process

A possible crash in one Dolphin window should not result in crashing
other Dolphin windows. Beside this it also prevents issues with
modal dialogs or notifications.

BUG: 269950
BUG: 206053
BUG: 196034
FIXED-IN: 4.7.0

M  +0    -7    dolphin/src/CMakeLists.txt     
M  +45   -62   dolphin/src/dolphinapplication.cpp     
M  +7    -31   dolphin/src/dolphinapplication.h     
M  +117  -135  dolphin/src/dolphinmainwindow.cpp     
M  +6    -8    dolphin/src/dolphinmainwindow.h     
M  +2    -15   dolphin/src/main.cpp     
D  +0    -9    dolphin/src/org.kde.dolphin.Application.xml     
D  +0    -13   dolphin/src/org.kde.dolphin.MainWindow.xml     
M  +2    -1    dolphin/src/settings/dolphinsettingsdialog.cpp     
M  +3    -0    dolphin/src/settings/dolphinsettingsdialog.h     

http://commits.kde.org/kde-baseapps/fff7573ebb910712ad97951bf1762e6a7bb0bdc7
Comment 3 Frank Reininghaus 2011-04-12 20:34:01 UTC
*** Bug 212957 has been marked as a duplicate of this bug. ***
Comment 4 Jekyll Wu 2011-09-22 06:48:16 UTC
*** Bug 255774 has been marked as a duplicate of this bug. ***