Let each DolphinMainWindow run in a custom process

A possible crash in one Dolphin window should not result in crashing
other Dolphin windows. Beside this it also prevents issues with
modal dialogs or notifications.

BUG: 269950
BUG: 206053
BUG: 196034
FIXED-IN: 4.7.0