src/dolphinapplication.cpp
@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2006 by Peter Penz <peter.penz19@gmail.com>             *
+ *   Copyright (C) 2006-2011 by Peter Penz <peter.penz19@gmail.com>        *
  *   Copyright (C) 2006 by Holger 'zecke' Freyther <freyther@kde.org>      *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
@@ -20,26 +20,60 @@
 
 #include "dolphinapplication.h"
 #include "dolphinmainwindow.h"
-#include "dolphinviewcontainer.h"
+#include "dolphin_generalsettings.h"
+#include "settings/dolphinsettings.h"
 
-#include <applicationadaptor.h>
 #include <KCmdLineArgs>
+#include <KDebug>
+#include <KRun>
 #include <KUrl>
-#include <QtDBus/QDBusConnection>
 
 DolphinApplication::DolphinApplication() :
-    m_lastId(0)
+    m_mainWindow(0)
 {
-    new ApplicationAdaptor(this);
-    QDBusConnection::sessionBus().registerObject("/dolphin/Application", this);
+    m_mainWindow = new DolphinMainWindow();
+    m_mainWindow->setAttribute(Qt::WA_DeleteOnClose);
+    m_mainWindow->show();
+
+    KCmdLineArgs* args = KCmdLineArgs::parsedArgs();
+
+    bool resetSplitSettings = false;
+    GeneralSettings* generalSettings = DolphinSettings::instance().generalSettings();
+    if (args->isSet("split") && !generalSettings->splitView()) {
+        // Dolphin should be opened with a split view although this is not
+        // set in the GeneralSettings. Temporary adjust the setting until
+        // all passed URLs have been opened.
+        generalSettings->setSplitView(true);
+        resetSplitSettings = true;
+    }
+
+    const int argsCount = args->count();
+    if (argsCount > 0) {
+        QList<KUrl> urls;
+        for (int i = 0; i < argsCount; ++i) {
+            const KUrl url = args->url(i);
+            if (url.isValid()) {
+                urls.append(url);
+            }
+        }
+
+        if (!urls.isEmpty()) {
+            if (args->isSet("select")) {
+                m_mainWindow->openFiles(urls);
+            } else {
+                m_mainWindow->openDirectories(urls);
+            }
+        }
+    }
+    args->clear();
+
+    if (resetSplitSettings) {
+        generalSettings->setSplitView(false);
+    }
 }
 
 DolphinApplication::~DolphinApplication()
 {
-    // cleanup what ever is left from the MainWindows
-    while (!m_mainWindows.isEmpty()) {
-        delete m_mainWindows.takeFirst();
-    }
 }
 
 DolphinApplication* DolphinApplication::app()
@@ -47,65 +81,14 @@ DolphinApplication* DolphinApplication::app()
     return qobject_cast<DolphinApplication*>(qApp);
 }
 
-DolphinMainWindow* DolphinApplication::createMainWindow()
+void DolphinApplication::restoreSession()
 {
-    DolphinMainWindow* mainWindow = new DolphinMainWindow(m_lastId);
-    ++m_lastId;
-    mainWindow->init();
-
-    m_mainWindows.append(mainWindow);
-    return mainWindow;
-}
-
-void DolphinApplication::removeMainWindow(DolphinMainWindow* mainWindow)
-{
-    m_mainWindows.removeAll(mainWindow);
-}
-
-void DolphinApplication::refreshMainWindows()
-{
-    for (int i = 0; i < m_mainWindows.count(); ++i) {
-        m_mainWindows[i]->refreshViews();
+    const QString className = KXmlGuiWindow::classNameOfToplevel(0);
+    if (className == QLatin1String("DolphinMainWindow")) {
+        m_mainWindow->restore(0);
+    } else {
+        kWarning() << "Unknown class " << className << " in session saved data!";
     }
-}
-
-int DolphinApplication::newInstance()
-{
-    KCmdLineArgs* args = KCmdLineArgs::parsedArgs();
-    static bool first = true;
-
-    const int argsCount = args->count();
-    if ((argsCount > 0) || !first || !isSessionRestored()) {
-        QList<KUrl> urls;
-        for (int i = 0; i < argsCount; ++i) {
-            urls.append(args->url(i));
-        }
-
-        DolphinMainWindow* win = createMainWindow();
-        if (urls.count() > 0) {
-            if (args->isSet("select")) {
-                win->openFiles(urls);
-            } else {
-                win->openDirectories(urls);
-            }
-        }
-        win->show();
-    }
-
-    first = false;
-    args->clear();
-    return 0;
-}
-
-int DolphinApplication::openWindow(const QString& urlString)
-{
-    DolphinMainWindow* win = createMainWindow();
-    const KUrl url(urlString);
-    if (!url.isEmpty()) {
-        win->openDirectories(QList<KUrl>() << url);
-    }
-    win->show();
-    return win->getId();
 }
 
 #include "dolphinapplication.moc"
